fix spacing for buttons in game

--- a/src/styles/components/_logButton.scss
+++ b/src/styles/components/_logButton.scss
@@ -1,5 +1,5 @@
 .log-container{
-  margin-top: 30px;
+  margin-top: 20px;
   .update{
     z-index: 2;
     position: absolute;
