--- a/src/styles/views/Game.scss
+++ b/src/styles/views/Game.scss
@@ -2,11 +2,11 @@
 
 #muteAudio{
   margin-bottom: 10px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 #disableVideo {
-  margin-top: 15px;
+  margin-top: 20px;
 }
 
 .game {
